--- a/css/style.css
+++ b/css/style.css
@@ -136,3 +136,21 @@ body, html {
     font-size: 10px;
   }
 }
+@media (max-width: 270px) {
+  .circle-overlay {
+    width: 52%;
+    max-width: 180px;
+  }
+
+  .circle-overlay h2,
+  .circle-overlay p,
+  .circle-overlay .code,
+  .social a {
+    font-size: 10px;
+    line-height: 1.2;
+  }
+
+  .social a {
+    padding: 3px 6px;
+  }
+}
